Changed the background to orange and added a header nav to the page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <a href="/home.hmtl">Home</a>
+        <a href="/home.hmtl">About</a>
+        <a href="/home.hmtl">Contact</a>
+        <a href="/home.hmtl">Map</a>
+        
+    </header>
     <h1>Keep Going</h1>
     <sPAN>In the jungle o mighty jungle</sPAN>
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto ut voluptates provident eum! Pariatur, assumenda exercitationem aperiam ab alias eius quia et a inventore delectus ipsum. Temporibus enim accusamus a.</p>
