--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <a href="/home.hmtl">Home</a>
+        <a href="/home.hmtl">About</a>
+        <a href="/home.hmtl">Contact</a>
+        <a href="/home.hmtl">Map</
+        
+    </header>
     <h1>Keep Going</h1>
     <sPAN>In the jungle o mighty jungle</sPAN>
+    <aside>Main Menu </aside>
 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto ut voluptates provident eum! Pariatur, assumenda exercitationem aperiam ab alias eius quia et a inventore delectus ipsum. Temporibus enim accusamus a.</p>
-<ul>
-    <li>one</li>
-    <li>two</li>
-    <li>three</li>
-</ul>
 </body>
 </html>
