--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <a href="/home.hmtl">Home</a>
         <a href="/home.hmtl">About</a>
         <a href="/home.hmtl">Contact</a>
-<<<<<<< HEAD
+
         <a href="/home.hmtl">Map</a>
-=======
-        <a href="/home.hmtl">Map</
->>>>>>> main
+        <a href="/home.hmtl">Map</a>
         
     </header>
     <h1>Keep Going</h1>
